[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Takahiro Mitsui <takahiro.mitsui@code.berlin>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.7"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
