[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Takahiro Mitsui <takahiro.mitsui@code.berlin>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.7"
python-dotenv = "^1.0.1"
pytest = "^8.2.2"
pytest-django = "^4.8.0"
pytest-factoryboy = "^2.7.0"
pytest-cov = "^5.0.0"
djangorestframework = "^3.15.2"
drf-spectacular = "^0.27.2"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
